@@ -1,3 +1,4 @@
+- CLT plugins allow drawing grid
 - add max.print option to R-Backend settings dialog
 - syntax highlighting is minimally faster for long outputs
 - graphics export plugin gains option for EPS compatibility
